--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,54 +18,14 @@
         <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css">
         <link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
-    
-        <style>
-            fieldset { 
-                padding: 20px;
-                margin:20px;
-            }
+        <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+        <link href="css/main.css" rel="stylesheet">
 
-            legend {
-                font-size:20px;
+        <script>
+            function getContent(){
+                document.getElementById("copy-textarea").value = document.getElementsByClassName("ql-clipboard")[0].innerHTML;
             }
-
-            .container {
-                width:100%;
-                text-align:center;
-            }
-
-            .child {
-                width:50%; 
-                margin:auto;
-                text-align: left;
-                min-width:400px;
-                max-width:800px;
-            }
-
-            input[type="file"] {
-                font-size: 15px;
-            }
-
-            #copy {
-                resize: vertical;
-            }
-
-            label {
-                display: block;
-                padding-left: 15px;
-                text-indent: -15px;
-            }
-            input[type="checkbox"] {
-                width: 13px;
-                height: 13px;
-                padding: 0;
-                margin:0;
-                vertical-align: bottom;
-                position: relative;
-                top: -1px;
-                *overflow: hidden;
-            }
-        </style>
+        </script>
     
     </head>
 
@@ -73,31 +33,37 @@
         <div class="container">
         <h1>Uberflip Content Upload Form</h1>
             <div class="child"> 
-                <form class="pure-form-stacked">
+                <form class="pure-form-stacked" action="/form-submit" method="post" enctype="multipart/form-data" onsubmit="return getContent()">
                     <fieldset>
                         <legend>Content Info</legend>
-                        <label for="title">Title</label><input id="title" type="text" placeholder="Analytics Monitoring: How to Ensure...">
-                        <label for="copy">Landing page copy</label><input id="copy" type="text">
-                        <label for="slug">Slug</label><input id="slug" type="text"> <!--Make sure to add regex validation for the slug-->
-                        <label for="content-category">Category</label>
-                        <select>
-
-                        </select>
-                    </fieldset>        
-                    <fieldset>
-                        <legend>Upload</legend>
-                        <label for="upload-pdf">Browse PDF</label><input type="file" id="upload-pdf">
-                        <label for="upload-thumb">Browse Thumbnail Image</label><input type="file" id="upload-thumb">
-                    </fieldset>
-                    <fieldset>
-                        <legend>Meta Information</legend>
+                        <label for="title">Title</label><input id="title" name="title" type="text" placeholder="Analytics Monitoring: How to Ensure Your Implementation Stays Up and Running">
+                        
+                        <label for="slug">Slug</label><input id="slug" name="slug" type="text"> <!--Make sure to add regex validation for the slug-->
                         <label for="author">Author</label>
-                        <select id="author">
+                        <select id="author" name="author">
                             <% authors.forEach( author => {%>
                             <option author-id="<%= author.id %>"><%= author.first_name + " " + author.last_name %> </option>
                             <%}); %>
                         </select>
+                        <label for="content-category">Category</label>
+                        <select id="category" name="category">
+
+                        </select>
+                    </fieldset> 
+                    <fieldset>
+                        <legend>Copy</legend>
+                        <label for="copy-textarea">Landing Page Copy</label>
+                        <textarea id="copy-textarea" name="copy" style="display:none;"></textarea>
+                        <div id="copy"></div>
+                        <label for="meta-des">Meta description</label>
+                        <textarea id="meta-des"></textarea>
+                    </fieldset>       
+                    <fieldset>
+                        <legend>Upload</legend>
+                        <label for="upload-pdf">Browse PDF</label><input type="file" id="upload-pdf" name="upload-pdf">
+                        <label for="upload-thumb">Browse Thumbnail Image</label><input type="file" id="upload-thumb" name="upload-thumb">
                     </fieldset>
+
                     <fieldset>
                         <legend>Tags</legend>
                         <ul id="tags"></ul>
@@ -110,6 +76,9 @@
                             </label>
                             <%}); %>
                         </select>
+                    </fieldset>
+                    <fieldset>
+                        <input type="submit" value="Submit">
                     </fieldset>
                 </form>
             </div>
@@ -125,6 +94,8 @@
                 });
             });
         </script>
+        <script type="text/javascript" src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        <script>var quill = new Quill('#copy', { theme: 'snow' });</script>
 
     </body>
 </html>
