--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/tag-it.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="js/form-validation.js" type="text/javascript"></script>
 
         <link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css">
         <link href="css/jquery.tagit.css" rel="stylesheet" type="text/css">
@@ -21,11 +22,7 @@
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
 
-        <script>
-            function getContent(){
-                document.getElementById("copy-textarea").value = document.getElementsByClassName("ql-clipboard")[0].innerHTML;
-            }
-        </script>
+        <title>Uberflip Upload Form</title>
     
     </head>
 
@@ -33,50 +30,78 @@
         <div class="container">
         <h1>Uberflip Content Upload Form</h1>
             <div class="child"> 
-                <form class="pure-form-stacked" action="/form-submit" method="post" enctype="multipart/form-data" onsubmit="return getContent()">
+                <form name="uf-form" class="pure-form-stacked" action="/form-submit" method="post" enctype="multipart/form-data" onsubmit="return getContent()">
+                    <fieldset>
+                        <legend>Hub</legend>
+                        <select id="hub" name="hub">
+                            <% hubs.forEach( hub => {%>
+                                <option value="<%= hub.id %>"><%= hub.name %></option>
+                            <%}); %>
+                        </select>
+                    </fieldset>
                     <fieldset>
                         <legend>Content Info</legend>
                         <label for="title">Title</label><input id="title" name="title" type="text" placeholder="Analytics Monitoring: How to Ensure Your Implementation Stays Up and Running">
-                        
-                        <label for="slug">Slug</label><input id="slug" name="slug" type="text"> <!--Make sure to add regex validation for the slug-->
+                        <span id="title-alert" class="form-alert">Please provide a valid title</span>
+                        <label for="slug">Slug</label><input id="slug" name="slug" type="text">
+                        <span id="slug-alert" class="form-alert">Please provide a valid slug (all lowercase with no spaces or special characters)</span>
                         <label for="author">Author</label>
                         <select id="author" name="author">
+                            <option>--</option>
                             <% authors.forEach( author => {%>
-                            <option author-id="<%= author.id %>"><%= author.first_name + " " + author.last_name %> </option>
+                            <option value="<%= author.id %>"><%= author.first_name + " " + author.last_name %> </option>
                             <%}); %>
                         </select>
-                        <label for="content-category">Category</label>
+                        <label for="category">Flipbook Folder</label>
                         <select id="category" name="category">
-
+                            <option>--</option>
+                            <% categories.forEach( category => {%>
+                                <option value="<%= category.Title.id %>"><%= category.Title.title %> </option>
+                            <%}); %>
                         </select>
+                        <span id="category-alert" class="form-alert">Please select a category</span>
+                        <div id="doc-stream-cont" style="display:none;">
+                            <label for="docStream">Doc Stream</label>
+                            <select id="docStream" name="docStream">
+                                <option>--</option>
+                                <% docStreams.forEach( stream => {%>
+                                    <option value="<%= stream.id %>"><%= stream.title %> </option>
+                                <%}); %>
+                            </select>
+                            <span id="doc-stream-alert" class="form-alert" style="display:block;">Please select a stream</span>
+                        </div>
                     </fieldset> 
                     <fieldset>
                         <legend>Copy</legend>
                         <label for="copy-textarea">Landing Page Copy</label>
                         <textarea id="copy-textarea" name="copy" style="display:none;"></textarea>
                         <div id="copy"></div>
-                        <label for="meta-des">Meta description</label>
-                        <textarea id="meta-des"></textarea>
+                        <span id="copy-alert" class="form-alert">Please provide landing page copy</span>
+                        <label for="metaDes">Meta description</label>
+                        <textarea id="metaDes" name="metaDes"></textarea>
+                        <span id="meta-alert" class="form-alert">Please provide a meta description</span>
                     </fieldset>       
                     <fieldset>
                         <legend>Upload</legend>
                         <label for="upload-pdf">Browse PDF</label><input type="file" id="upload-pdf" name="upload-pdf">
+                        <span id="pdf-alert" class="form-alert">Please upload a pdf</span>
                         <label for="upload-thumb">Browse Thumbnail Image</label><input type="file" id="upload-thumb" name="upload-thumb">
+                        <span id="thumb-alert" class="form-alert">Please upload a png or jpeg</span>
                     </fieldset>
 
                     <fieldset>
                         <legend>Tags</legend>
-                        <ul id="tags"></ul>
+                        <ul id="tagit-ul"></ul>
+                        <input id="tags" name="tags" type="text" style="display:none;">
                     </fieldset>
                     <fieldset>
-                        <legend>Streams</legend>
-                            <% streams.forEach( stream => {%>
-                            <label for="<%= stream.id %>" class="pure-checkbox">
-                                <input type="checkbox" id="<%= stream.id %>" value="<%= stream.title %>"><%= stream.title %>
-                            </label>
-                            <%}); %>
-                        </select>
-                    </fieldset>
+                        <legend>Marketing Streams</legend>
+                        <% marketingStreams.forEach( stream => {%>
+                        <label for="<%= stream.id %>" class="pure-checkbox">
+                            <input type="checkbox" id="<%= stream.id %>" value="<%= stream.title %>"><%= stream.title %>
+                        </label>
+                        <%}); %>
+                </fieldset>
                     <fieldset>
                         <input type="submit" value="Submit">
                     </fieldset>
@@ -86,7 +111,7 @@
 
         <script type="text/javascript">
             $(document).ready(function() {
-                $("#tags").tagit({
+                $("#tagit-ul").tagit({
                     autocomplete: {
                         source: <%- JSON.stringify(locals.contentTags) %>
                     },
@@ -96,6 +121,30 @@
         </script>
         <script type="text/javascript" src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
         <script>var quill = new Quill('#copy', { theme: 'snow' });</script>
+
+        <script>
+            var catSelect = document.getElementById("category");
+            catSelect.addEventListener("change", function () {
+                console.log("changed");
+                //get all stream options
+                var streamOptions = document.getElementById("docStream").children;
+                //Collapse stream options into their text values
+                var values = [].map.call(streamOptions, x => x.innerText );
+                //identify whether one of them matches
+                var test = values.some(function (value) { return document.querySelector("#category option:checked").innerText === value });
+                //If there is a match, select that option
+                for (var i = 0; i < values.length; i++) {
+                    if (values[i] === document.querySelector("#category option:checked").innerText) {
+                        document.getElementById("docStream").selectedIndex = i;
+                        document.getElementById("doc-stream-cont").style.display = "none";
+                        return;
+                    }
+                }
+                document.getElementById("docStream").selectedIndex = 0;
+                document.getElementById("doc-stream-cont").style.display = "block";
+                console.log("no match")
+            });
+        </script>
 
     </body>
 </html>
